<resources>
    <string name="app_name">Database</string>
    <string name="action_settings">Settings</string>
    <string name="add_string">Add</string>
    <string name="update_string">Update</string>
    <string name="delete_string">Delete</string>
    <string name="name_label">Name</string>
    <string name="price_label">Price</string>
    <string name="add_button">ADD</string>
    <string name="back_label">BACK</string>
    <string name="reset_label">RESET</string>
</resources>
