<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.cs.niu.z1829024.database.MainActivity">
    <item
        android:id="@+id/action_reset"
        android:icon="@android:drawable/ic_notification_clear_all"
        android:title="@string/reset_label"

        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_add"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="100"
        android:title="@string/add_string"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="100"
        android:title="@string/delete_string"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_update"
        android:icon="@android:drawable/ic_menu_edit"
        android:orderInCategory="100"
        android:title="@string/update_string"
        app:showAsAction="ifRoom" />
</menu>
